# dot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Brewfile  Makefile  README.md  TODO.md  bash_aliases.ubuntu  bash_profile.osx  bash_prompt.all  bashrc.ubuntu  gitconfig.osx  install  install.conf.yaml  pyproject.toml  tmux.conf
.claude/: settings.local.json
.private-journal/2026-03-27/: 22-38-40-258258.embedding  22-38-40-258258.md
.toolkit/: Brewfile  main.mk
bash/: alias.common.bash  alias.freebsd.bash  alias.osx.bash  alias.ubuntu.bash  aliases.debian  complete.bash  init.bash  liquidpromptrc  profile.bash  prompt.bash  rc  runcom.bash  runcom.freebsd.bash  runcom.macos.bash  runcom.osx.bash  runcom.post.bash  runcom.ubuntu.bash
claude/: CLAUDE.md  settings.json
config/liquidprompt/: liquidpromptrc
ctags/: terraform.ctags
docs/: development.md  mcp.md
dotbot_plugins/: _mcp_core.py  mcp_plugin.py
fonts/: custom_unicode_code_points.txt  install_fonts  install_fonts.bash
ghostty/: config.ghostty
git/: gitconfig  ignore_global
gpg/: gpg-agent.conf  gpg.conf
iterm/: com.googlecode.iterm2.plist
lazygit/: config.yml  defaults-reference.md
mcp/: .env.example  bridge.sh
scripts/: sort_json.py
ssh/: .gitignore  config  defaults.sshconfig  globals.sshconfig  public_fingerprints
terraform/: runcom
tests/: conftest.py
tmp/: .gitignore  README.md
tmux/: tmux.conf  tmux.conf.bak
vim/: runcom.vim
zed/: .gitignore  keymap.json  settings.json  tasks.json
zsh/: README.md  alias.common.zsh  runcom.zsh  zshrc.local.example
(+43 files in other folders)
