[project]
name = "dot-scripts"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "commentjson>=0.9",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
